@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.lang.reflect.Array;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,20 +69,17 @@ import org.springframework.util.ReflectionUtils;
  */
 final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnnotation<A> {
 
-	private static final Map<Class<?>, Object> EMPTY_ARRAYS;
-	static {
-		Map<Class<?>, Object> emptyArrays = new HashMap<>();
-		emptyArrays.put(String.class, new String[] {});
-		emptyArrays.put(boolean.class, new boolean[] {});
-		emptyArrays.put(byte.class, new byte[] {});
-		emptyArrays.put(char.class, new char[] {});
-		emptyArrays.put(double.class, new double[] {});
-		emptyArrays.put(float.class, new float[] {});
-		emptyArrays.put(int.class, new int[] {});
-		emptyArrays.put(long.class, new long[] {});
-		emptyArrays.put(short.class, new short[] {});
-		EMPTY_ARRAYS = Collections.unmodifiableMap(emptyArrays);
-	}
+	private static final Map<Class<?>, Object> EMPTY_ARRAYS = Map.of(
+		boolean.class, new boolean[0],
+		byte.class, new byte[0],
+		char.class, new char[0],
+		double.class, new double[0],
+		float.class, new float[0],
+		int.class, new int[0],
+		long.class, new long[0],
+		short.class, new short[0],
+		String.class, new String[0]);
+
 
 	private final AnnotationTypeMapping mapping;
 
@@ -108,9 +104,6 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	private final int[] resolvedRootMirrors;
 
 	private final int[] resolvedMirrors;
-
-	@Nullable
-	private String string;
 
 
 	private TypeMappedAnnotation(AnnotationTypeMapping mapping, @Nullable ClassLoader classLoader,
@@ -329,50 +322,20 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	}
 
 	@Override
+	@SuppressWarnings("unchecked")
 	protected A createSynthesized() {
+		if (getType().isInstance(this.rootAttributes) && !isSynthesizable()) {
+			return (A) this.rootAttributes;
+		}
 		return SynthesizedMergedAnnotationInvocationHandler.createProxy(this, getType());
 	}
 
-	@Override
-	public String toString() {
-		String string = this.string;
-		if (string == null) {
-			StringBuilder builder = new StringBuilder();
-			builder.append("@");
-			builder.append(getType().getName());
-			builder.append("(");
-			for (int i = 0; i < this.mapping.getAttributes().size(); i++) {
-				Method attribute = this.mapping.getAttributes().get(i);
-				builder.append(i == 0 ? "" : ", ");
-				builder.append(attribute.getName());
-				builder.append("=");
-				builder.append(toString(getValue(i, Object.class)));
-			}
-			builder.append(")");
-			string = builder.toString();
-			this.string = string;
+	private boolean isSynthesizable() {
+		// Already synthesized?
+		if (this.rootAttributes instanceof SynthesizedAnnotation) {
+			return false;
 		}
-		return string;
-	}
-
-	private Object toString(@Nullable Object value) {
-		if (value == null) {
-			return "";
-		}
-		if (value instanceof Class) {
-			return ((Class<?>) value).getName();
-		}
-		if (value.getClass().isArray()) {
-			StringBuilder builder = new StringBuilder();
-			builder.append("[");
-			for (int i = 0; i < Array.getLength(value); i++) {
-				builder.append(i == 0 ? "" : ", ");
-				builder.append(toString(Array.get(value, i)));
-			}
-			builder.append("]");
-			return builder.toString();
-		}
-		return String.valueOf(value);
+		return this.mapping.isSynthesizable();
 	}
 
 	@Override
@@ -415,9 +378,8 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 			}
 		}
 		if (!forMirrorResolution) {
-			attributeIndex = (mapping.getDistance() != 0 ?
-					this.resolvedMirrors :
-					this.resolvedRootMirrors)[attributeIndex];
+			attributeIndex =
+					(mapping.getDistance() != 0 ? this.resolvedMirrors : this.resolvedRootMirrors)[attributeIndex];
 		}
 		if (attributeIndex == -1) {
 			return null;
@@ -425,15 +387,13 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 		if (mapping.getDistance() == 0) {
 			Method attribute = mapping.getAttributes().get(attributeIndex);
 			Object result = this.valueExtractor.extract(attribute, this.rootAttributes);
-			return (result != null) ? result : attribute.getDefaultValue();
+			return (result != null ? result : attribute.getDefaultValue());
 		}
 		return getValueFromMetaAnnotation(attributeIndex, forMirrorResolution);
 	}
 
 	@Nullable
-	private Object getValueFromMetaAnnotation(int attributeIndex,
-			boolean forMirrorResolution) {
-
+	private Object getValueFromMetaAnnotation(int attributeIndex, boolean forMirrorResolution) {
 		Object value = null;
 		if (this.useMergedValues || forMirrorResolution) {
 			value = this.mapping.getMappedAnnotationValue(attributeIndex, forMirrorResolution);
@@ -467,15 +427,14 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 			value = ClassUtils.resolveClassName((String) value, getClassLoader());
 		}
 		else if (value instanceof Class[] && type == String[].class) {
-			Class<?>[] classes = (Class[]) value;
+			Class<?>[] classes = (Class<?>[]) value;
 			String[] names = new String[classes.length];
 			for (int i = 0; i < classes.length; i++) {
 				names[i] = classes[i].getName();
 			}
 			value = names;
 		}
-		else if (value instanceof String[] && type == Class[].class) {
-			String[] names = (String[]) value;
+		else if (value instanceof String[] names && type == Class[].class) {
 			Class<?>[] classes = new Class<?>[names.length];
 			for (int i = 0; i < names.length; i++) {
 				classes[i] = ClassUtils.resolveClassName(names[i], getClassLoader());
@@ -510,10 +469,9 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 			return adaptForAttribute(attribute, array);
 		}
 		if (attributeType.isAnnotation()) {
-			return adaptToMergedAnnotation(value,(Class<? extends Annotation>) attributeType);
+			return adaptToMergedAnnotation(value, (Class<? extends Annotation>) attributeType);
 		}
-		if (attributeType.isArray() && attributeType.getComponentType().isAnnotation() &&
-				value.getClass().isArray()) {
+		if (attributeType.isArray() && attributeType.getComponentType().isAnnotation()) {
 			MergedAnnotation<?>[] result = new MergedAnnotation<?>[Array.getLength(value)];
 			for (int i = 0; i < result.length; i++) {
 				result[i] = adaptToMergedAnnotation(Array.get(value, i),
@@ -587,8 +545,7 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 
 	private int getAttributeIndex(String attributeName, boolean required) {
 		Assert.hasText(attributeName, "Attribute name must not be null");
-		int attributeIndex = (isFiltered(attributeName) ? -1 :
-				this.mapping.getAttributes().indexOf(attributeName));
+		int attributeIndex = (isFiltered(attributeName) ? -1 : this.mapping.getAttributes().indexOf(attributeName));
 		if (attributeIndex == -1 && required) {
 			throw new NoSuchElementException("No attribute named '" + attributeName +
 					"' present in merged annotation " + getType().getName());
@@ -610,7 +567,7 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 		}
 		if (this.source != null) {
 			if (this.source instanceof Class) {
-				return ((Class<?>) source).getClassLoader();
+				return ((Class<?>) this.source).getClassLoader();
 			}
 			if (this.source instanceof Member) {
 				((Member) this.source).getDeclaringClass().getClassLoader();
@@ -639,6 +596,7 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	@Nullable
 	static <A extends Annotation> TypeMappedAnnotation<A> createIfPossible(
 			AnnotationTypeMapping mapping, MergedAnnotation<?> annotation, IntrospectionFailureLogger logger) {
+
 		if (annotation instanceof TypeMappedAnnotation) {
 			TypeMappedAnnotation<?> typeMappedAnnotation = (TypeMappedAnnotation<?>) annotation;
 			return createIfPossible(mapping, typeMappedAnnotation.source,
